fixed #map width on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,8 +546,9 @@ ul::-webkit-scrollbar-corner {
     #map-container {
         width:99%;
     }
-    
+
     #map {
+        width:100%;
         padding:0;
         margin:0;
         box-shadow:none;
